Finish plot_voxel. Update plot_voxel notebook. Fix d_param and voxel_data inconsistencies. Remove some logs

--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,183 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipyvolume as ipv\n",
+    "from scipy import ndimage\n",
+    "import numpy as np\n",
+    "#import binvox_rw\n",
     "import os\n",
+    "import trimesh\n",
     "import pickle\n",
-    "import numpy  as np\n",
+    "import math\n",
+    "import warnings\n",
+    "from numpy import cos, sin, pi\n",
+    "from ipyvolume import pylab as p3\n",
     "\n",
-    "def plot_voxel(vin):\n",
-    "    if np.ndim(vin) == 5:\n",
-    "        vin = vin[0,:,:,:,0]\n",
-    "#     else:\n",
-    "#         vin = vin[:,:,:]  \n",
-    "    \n",
-    "    nVertices = 24\n",
-    "    nFaces = 12\n",
-    "    nBoxes = np.int(np.sum(vin))\n",
+    "try:\n",
+    "    import scipy.ndimage\n",
+    "    import scipy.special\n",
+    "except:\n",
+    "    pass\n",
     "\n",
-    "    allVertices = np.ndarray([nBoxes*nVertices,3])\n",
-    "    allFaces = np.ndarray([nBoxes*nFaces,3])\n",
-    "    size_voxel = np.max(np.shape(vin))\n",
-    "    print(size_voxel)\n",
+    "def plot_voxel_size(n=1, m=1, p=1, color='red'):\n",
+    "    ipv.clear()\n",
+    "    f = ipv.figure(height=600, width=800)\n",
+    "    v = np.ones([n,m,p])\n",
+    "    grid = ipv.plot_voxel(d=v,\n",
+    "                    size=100/np.max(np.shape(v)),\n",
+    "                    size_marker=1,\n",
+    "                    scale_factor=1,\n",
+    "                    offset=[0,0,0],\n",
+    "                    marker='box', \n",
+    "                    color=color,\n",
+    "                    opacity=1.0,\n",
+    "                    grow_limits=True,\n",
+    "                    center=True)\n",
     "\n",
-    "    vshape = np.shape(vin)\n",
-    "    c = 0\n",
-    "    \n",
-    "    delta = size_voxel/2\n",
-    "    vertices = np.array((( delta,  delta,  delta),   #0\n",
-    "                         (-delta,  delta,  delta),   #1\n",
-    "                         (-delta,  delta, -delta),   #2\n",
-    "                         ( delta,  delta, -delta),   #3\n",
-    "                         \n",
-    "                         ( delta,  delta,  delta),   #4\n",
-    "                         (-delta,  delta,  delta),   #5\n",
-    "                         ( delta, -delta,  delta),   #6\n",
-    "                         (-delta, -delta,  delta),   #7\n",
-    "                         \n",
-    "                         ( delta,  delta,  delta),   #8\n",
-    "                         ( delta,  delta, -delta),   #9\n",
-    "                         ( delta, -delta,  delta),   #10\n",
-    "                         ( delta, -delta, -delta),   #11\n",
-    "                        \n",
-    "                         ( delta, -delta,  delta),   #12\n",
-    "                         (-delta, -delta,  delta),   #13\n",
-    "                         (-delta, -delta, -delta),   #14\n",
-    "                         ( delta, -delta, -delta),   #15\n",
-    "                        \n",
-    "                         ( delta,  delta, -delta),   #16\n",
-    "                         (-delta,  delta, -delta),   #17\n",
-    "                         ( delta, -delta, -delta),   #18\n",
-    "                         (-delta, -delta, -delta),   #19 \n",
-    "                        \n",
-    "                         (-delta,  delta,  delta),   #20\n",
-    "                         (-delta,  delta, -delta),   #21\n",
-    "                         (-delta, -delta,  delta),   #22\n",
-    "                         (-delta, -delta, -delta),)) #23\n",
-    "\n",
-    "        \n",
-    "    faces = np.array(((0, 1, 2), \n",
-    "                      (0, 2, 3), \n",
-    "                      (4, 6, 5), \n",
-    "                      (5, 6, 7),\n",
-    "                      (8, 9,10), \n",
-    "                      (9,11,10),\n",
-    "                      (12,13,14),\n",
-    "                      (12,14,15),\n",
-    "                      (16,18,17),\n",
-    "                      (17,18,19),\n",
-    "                      (20,21,22),\n",
-    "                      (21,23,22)))\n",
-    "    \n",
-    "    \n",
-    "    # This did the trick, much faster with sparse voxel representation\n",
-    "    sparse = np.asarray(np.nonzero(vin), np.int)\n",
-    "\n",
-    "    for c, v in enumerate(sparse.T):\n",
-    "        allVertices[c*nVertices:(c+1)*nVertices, :] = vertices + v\n",
-    "        allFaces[c*nFaces:(c+1)*nFaces, :] = faces + c * nVertices\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    blob = ipv.plot_trisurf(allVertices[:,0],\n",
-    "                allVertices[:,1],\n",
-    "                allVertices[:,2],\n",
-    "                triangles=allFaces)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    ipv.xlim(-delta, delta-1)\n",
-    "    ipv.ylim(-delta, delta-1)\n",
-    "    ipv.zlim(-delta, delta-1)\n",
-    "    ipv.squarelim()\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    return blob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cube = np.zeros([128,128,128])\n",
-    "cube[32:96, 32:96, 32:96] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c755b5dac10a4788a33eb59fb245b125",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Figure(animation=0.0, camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "128\n"
-     ]
-    }
-   ],
-   "source": [
-    "f = ipv.figure(width=800, height=600)\n",
-    "f.animation = 0\n",
-    "ipv.show()\n",
-    "plot_voxel(cube)\n",
-    "ipv.squarelim()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pl = ipv.point_light(position=[120, 120, 120], distance=400, decay=2, intensity=2)\n"
+    "    ipv.style.use(['minimal', {'background-color': 'white'}])\n",
+    "    ipv.show()\n",
+    "    return grid\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e21c798cabc40bd8f32557a1423831b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# branch contains some iddues with xlim and squarelim stuff, but not interesitng here\n",
-    "\n",
-    "# rerun this cell to get correct scaling (axis ticks still wrong)\n",
-    "\n",
-    "size_voxel = 128\n",
-    "ipv.xlim(-size_voxel/2, size_voxel/2-1)\n",
-    "ipv.ylim(-size_voxel/2, size_voxel/2-1)\n",
-    "ipv.zlim(-size_voxel/2, size_voxel/2-1)\n",
-    "ipv.squarelim()"
+    "grid = plot_voxel_size(10,1,1,\"yellow\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n"
+     ]
+    }
+   ],
    "source": [
-    "sparse = np.asarray(np.nonzero(cube), np.int)"
+    "grid.size_marker=None\n",
+    "grid.d[0:3, :, :] = 0.4\n",
+    "grid.d[6:10, :, :] = 0.9"
    ]
   },
   {
@@ -187,19 +97,197 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3, 262144)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n"
+     ]
     }
    ],
    "source": [
-    "sparse.shape"
+    "grid.d[1,:,:]=0\n",
+    "grid.d[8,0,0]=0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7805a015a8224fae80b92ff3f79129ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "grid = plot_voxel_size(15,10,1,\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid.d[2:6] = 0\n",
+    "grid.d[8:14:5] = 0\n",
+    "grid.d[9:13:5, :, :] = 0\n",
+    "grid.d[9:13:5] = 0\n",
+    "grid.d[12,:,:] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n",
+      "Voxel Callback Compute x,y,z\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid.d[0:6, 4:6, 0]=1\n",
+    "grid.d[10:12, 8:9, 0] = 0\n",
+    "grid.d[14, 1:3, 0] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.scale_factor=3\n",
+    "grid.size_marker=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "277d92184b994f378e7558876b7ba9bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "grid = plot_voxel_size(16,16,16,\"orange\")\n",
+    "grid.scale_factor=2\n",
+    "grid.size_marker=[0.5, 1, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.pos_offset_x += 15\n",
+    "grid.pos_offset_y += 15\n",
+    "grid.pos_offset_z -= 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c40c90aafe741e5b20241780c3a4e77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "grid = plot_voxel_size(16,16,16,\"green\")\n",
+    "grid.scale_factor=3\n",
+    "grid.size_marker=[0.5, 2, 0.7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.x = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.x += -5\n",
+    "grid.send_state('x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -225,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
