Add lighting example in plot_voxel notebook. Remove unused set xyz functions

--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,12 @@
     "    import scipy.special\n",
     "except:\n",
     "    pass\n",
-    "\n",
-    "def plot_voxel_size(n=1, m=1, p=1, color='red'):\n",
-    "    ipv.clear()\n",
-    "    f = ipv.figure(height=600, width=800)\n",
+    "def plot_voxel_simple(n=1, m=1, p=1, color='red', size=None):\n",
     "    v = np.ones([n,m,p])\n",
+    "    if size==None:\n",
+    "        size=100/np.max(np.shape(v))\n",
     "    grid = ipv.plot_voxel(d=v,\n",
-    "                    size=100/np.max(np.shape(v)),\n",
+    "                    size=size,\n",
     "                    size_marker=1,\n",
     "                    scale_factor=1,\n",
     "                    offset=[0,0,0],\n",
@@ -38,22 +37,34 @@
     "                    opacity=1.0,\n",
     "                    grow_limits=True,\n",
     "                    center=True)\n",
+    "    return grid\n",
+    "def plot_voxel_size(n=1, m=1, p=1, color='red', size=None):\n",
+    "\n",
+    "    ipv.clear()\n",
+    "    ipv.figure(height=600, width=800)\n",
+    "    grid = plot_voxel_simple(n=n, m=m, p=p, color=color, size=size)\n",
     "\n",
     "    ipv.style.use(['minimal', {'background-color': 'white'}])\n",
     "    ipv.show()\n",
-    "    return grid\n",
-    "    "
+    "    return grid\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Customize Voxel Marker Size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e21c798cabc40bd8f32557a1423831b",
+       "model_id": "5b2f5ed642d74e5eb4d61cb44f8d6530",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,20 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid.size_marker=None\n",
     "grid.d[0:3, :, :] = 0.4\n",
@@ -93,32 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid.d[1,:,:]=0\n",
     "grid.d[8,0,0]=0"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Slice Operator and Scale Factor Demo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7805a015a8224fae80b92ff3f79129ef",
+       "model_id": "9459e1c67cd842e5b7eff1a688e0a2f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,22 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid.d[2:6] = 0\n",
     "grid.d[8:14:5] = 0\n",
@@ -162,21 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n",
-      "Voxel Callback Compute x,y,z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid.d[0:6, 4:6, 0]=1\n",
     "grid.d[10:12, 8:9, 0] = 0\n",
@@ -185,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,14 +167,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Voxel Offset Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "277d92184b994f378e7558876b7ba9bd",
+       "model_id": "fff823d733dd4d1b92feafc01a1bd7b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,14 +194,14 @@
     }
    ],
    "source": [
-    "grid = plot_voxel_size(16,16,16,\"orange\")\n",
+    "grid = plot_voxel_size(16,16,16,\"blue\")\n",
     "grid.scale_factor=2\n",
     "grid.size_marker=[0.5, 1, 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,14 +211,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Change X Values Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c40c90aafe741e5b20241780c3a4e77",
+       "model_id": "f95b7b35b1c44fc0ac549b9449e8ec9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,14 +238,14 @@
     }
    ],
    "source": [
-    "grid = plot_voxel_size(16,16,16,\"green\")\n",
+    "grid = plot_voxel_size(16,20,10,\"green\")\n",
     "grid.scale_factor=3\n",
     "grid.size_marker=[0.5, 2, 0.7]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,27 +254,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid.x += -5\n",
+    "grid.x += -10\n",
     "grid.send_state('x')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Lighting Support Demo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7e3e29bd97d344ab8e8c81182c1c03e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aac47df0359e4232b22f5050106cc041",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(ColorPicker(value='orange', description='Light Color:', layout=Layout(width='450p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ipv.clear()\n",
+    "ipv.figure(height=600, width=800)\n",
+    "\n",
+    "box = plot_voxel_simple(16,16,16, \"yellow\", size=1)\n",
+    "box.scale_factor=3\n",
+    "box.size_marker=1\n",
+    "box.opacity=0.7\n",
+    "plane = plot_voxel_simple(160,1,160, \"red\", size=1)\n",
+    "plane.pos_offset_x = 50\n",
+    "plane.pos_offset_y = -100\n",
+    "plane.pos_offset_z = 50\n",
+    "\n",
+    "# light_d = p3.directional_light(light_color=\"blue\", \n",
+    "#                                position=[-100,100,100],\n",
+    "#                                target=[plane.pos_offset_x, plane.pos_offset_y, plane.pos_offset_z])\n",
+    "light_s = p3.spot_light(light_color=\"orange\", \n",
+    "                        position=[-100,100,-100], \n",
+    "                        target=[plane.pos_offset_x, plane.pos_offset_y, plane.pos_offset_z])\n",
+    "light_s.angle = 0.2\n",
+    "light_s.penumbra = 0.1\n",
+    "light_s.shadow.bias = -0.00007\n",
+    "light_s.shadow.radius = 1.7\n",
+    "\n",
+    "ipv.style.use(['minimal', {'background-color': 'white'}])\n",
+    "ipv.show()\n",
+    "\n",
+    "p3.show_lighting_widgets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plane.receive_shadow=False"
+   ]
   },
   {
    "cell_type": "code",
