Scatter reuses cast/receive shadows when using non instanced geometry

--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b2f5ed642d74e5eb4d61cb44f8d6530",
+       "model_id": "08adb6cde5eb41cbac4cd71a8bd464b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9459e1c67cd842e5b7eff1a688e0a2f7",
+       "model_id": "80796c8b67dd4ed9b60849f96591576a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fff823d733dd4d1b92feafc01a1bd7b7",
+       "model_id": "120be9c952dc471ba6f4fafaf3c53c9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,13 +219,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f95b7b35b1c44fc0ac549b9449e8ec9e",
+       "model_id": "202028e2b68d4a9692a2156b138750cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3e29bd97d344ab8e8c81182c1c03e0",
+       "model_id": "8a6f20a6bca44212a1ae45afac0c7ceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aac47df0359e4232b22f5050106cc041",
+       "model_id": "75a6f2c362a548f1ad70d0de2b445b62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -335,11 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plane.receive_shadow=False"
+    "plane.receive_shadow=False\n",
+    "box.receive_shadow=False\n",
+    "#plane.cast_shadow=False\n",
+    "#box.cast_shadow=False"
    ]
   },
   {
