Update plot_voxel and plot_pointcloud documentation

--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08adb6cde5eb41cbac4cd71a8bd464b2",
+       "model_id": "5586cc13fea94fe582032e67090d6e3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80796c8b67dd4ed9b60849f96591576a",
+       "model_id": "c79dace8a24f4621b9d61eb881ee0daf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "120be9c952dc471ba6f4fafaf3c53c9c",
+       "model_id": "2f0935d017414f289336f396b695d447",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "202028e2b68d4a9692a2156b138750cf",
+       "model_id": "f99cd8c33a3d436dbc00dc89f6c4126e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,12 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "grid.x += -10\n",
-    "grid.send_state('x')"
+    "grid.send_state('x') #should call send_state whenever changing x y z"
    ]
   },
   {
@@ -271,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a6f20a6bca44212a1ae45afac0c7ceb",
+       "model_id": "f909a3fe1fd343ada388e721046b8f2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75a6f2c362a548f1ad70d0de2b445b62",
+       "model_id": "e5d0eab7afa9444a93b970641cf4c3d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
