Fix d_opacity shader code. Opacity supported in default mode

--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d69a90adb4242c5a0b8860a14f43ed2",
+       "model_id": "6080f55c22bd42e996304c9783167cb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.opacity=0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c79dace8a24f4621b9d61eb881ee0daf",
+       "model_id": "a27c14ec172e4d25883fe6cf04fcd7ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f0935d017414f289336f396b695d447",
+       "model_id": "e570e643a9da4e3eb8333685584a5c93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f99cd8c33a3d436dbc00dc89f6c4126e",
+       "model_id": "e056da8ee4ce466c8694557502676514",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,13 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f909a3fe1fd343ada388e721046b8f2c",
+       "model_id": "a7ae4756c3a24d53bf6f0d43d91a6a34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5d0eab7afa9444a93b970641cf4c3d8",
+       "model_id": "9b369d0edbc74442aceb327471a1f96a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,7 +328,6 @@
     "box = plot_voxel_simple(16,16,16, \"yellow\", size=1)\n",
     "box.scale_factor=3\n",
     "box.size_marker=1\n",
-    "box.opacity=0.7\n",
     "plane = plot_voxel_simple(160,1,160, \"red\", size=1)\n",
     "plane.pos_offset_x = 50\n",
     "plane.pos_offset_y = -100\n",
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
