--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -38,13 +38,13 @@
     "                    grow_limits=True,\n",
     "                    center=True)\n",
     "    return grid\n",
-    "def plot_voxel_size(n=1, m=1, p=1, color='red', size=None):\n",
+    "def plot_voxel_size(n=1, m=1, p=1, color='red', size=None, minimal=False):\n",
     "\n",
     "    ipv.clear()\n",
     "    ipv.figure(height=600, width=800)\n",
     "    grid = plot_voxel_simple(n=n, m=m, p=p, color=color, size=size)\n",
-    "\n",
-    "    ipv.style.use(['minimal', {'background-color': 'white'}])\n",
+    "    if minimal:\n",
+    "        ipv.style.use(['minimal', {'background-color': 'white'}])\n",
     "    ipv.show()\n",
     "    return grid\n"
    ]
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6080f55c22bd42e996304c9783167cb2",
+       "model_id": "fb192addcead437d99cb094fe4ec77b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a27c14ec172e4d25883fe6cf04fcd7ef",
+       "model_id": "946a8b78116b49998d5f7cb787357958",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,18 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "grid.d[0:6, 4:6, 0]=1\n",
     "grid.d[10:12, 8:9, 0] = 0\n",
-    "grid.d[14, 1:3, 0] = 0"
+    "grid.d[14, 1:3, 0] = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e570e643a9da4e3eb8333685584a5c93",
+       "model_id": "001e7b2601eb4289a0716b30638da65b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e056da8ee4ce466c8694557502676514",
+       "model_id": "fbf432f927c04a388bdd44ef21d606ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,13 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35360a78d0a14cbca880035bb18c0db4",
+       "model_id": "e9eb1ade94fd4cd4a46e891b1022ad41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c06c83ec1744b2f99dbac50342cc299",
+       "model_id": "9ccc82b0851d4f61a6cf951543bb17e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,9 +329,9 @@
     "box.scale_factor=3\n",
     "box.size_marker=1\n",
     "plane = plot_voxel_simple(160,1,160, \"red\", size=1)\n",
-    "plane.pos_offset_x = 50\n",
-    "plane.pos_offset_y = -100\n",
-    "plane.pos_offset_z = 50\n",
+    "#plane.pos_offset_x = 20\n",
+    "#plane.pos_offset_y = -100\n",
+    "#plane.pos_offset_z = 50\n",
     "\n",
     "# light_d = p3.directional_light(light_color=\"blue\", \n",
     "#                                position=[-100,100,100],\n",
