--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb192addcead437d99cb094fe4ec77b6",
+       "model_id": "1d52194329fc417f8dd03d59f4de295d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "946a8b78116b49998d5f7cb787357958",
+       "model_id": "d0183815cd33421a9aa8a7430d8bafa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "001e7b2601eb4289a0716b30638da65b",
+       "model_id": "6cb9f13e823c4cdfbf714d8b6aab42a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbf432f927c04a388bdd44ef21d606ea",
+       "model_id": "85c029dcf0d24eafb8943d085e3d264e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,12 +258,12 @@
    "source": [
     "grid = plot_voxel_size(16,20,10,\"green\")\n",
     "grid.scale_factor=3\n",
-    "grid.size_marker=[0.5, 2, 0.7]"
+    "grid.size_marker=[2, 0.5, 0.7]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,13 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9eb1ade94fd4cd4a46e891b1022ad41",
+       "model_id": "2d9a9fbb1b8f4990b17d4b0a083e397f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ccc82b0851d4f61a6cf951543bb17e6",
+       "model_id": "ab0bc2837780411ea95b0f7fa366b59f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,16 +329,18 @@
     "box.scale_factor=3\n",
     "box.size_marker=1\n",
     "plane = plot_voxel_simple(160,1,160, \"red\", size=1)\n",
-    "#plane.pos_offset_x = 20\n",
-    "#plane.pos_offset_y = -100\n",
-    "#plane.pos_offset_z = 50\n",
+    "plane.pos_offset_x = -30\n",
+    "plane.pos_offset_y = -20\n",
+    "plane.pos_offset_z = -30\n",
     "\n",
     "# light_d = p3.directional_light(light_color=\"blue\", \n",
     "#                                position=[-100,100,100],\n",
     "#                                target=[plane.pos_offset_x, plane.pos_offset_y, plane.pos_offset_z])\n",
     "light_s = p3.spot_light(light_color=\"orange\", \n",
-    "                        position=[-100,100,-100], \n",
-    "                        target=[plane.pos_offset_x, plane.pos_offset_y, plane.pos_offset_z])\n",
+    "                        position=[-100,200,-100], \n",
+    "                        target=[plane.pos_offset_x+55, \n",
+    "                                plane.pos_offset_y, \n",
+    "                                plane.pos_offset_z+55])\n",
     "light_s.angle = 0.2\n",
     "light_s.penumbra = 0.1\n",
     "light_s.shadow.bias = -0.00007\n",
