--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d52194329fc417f8dd03d59f4de295d",
+       "model_id": "ff7bda56d833454fa4ff956ec79454f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0183815cd33421a9aa8a7430d8bafa1",
+       "model_id": "24aac214daa649f8ba2beabe581d552b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,23 +165,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "grid.d[0:6, 4:6, 0]=1\n",
     "grid.d[10:12, 8:9, 0] = 0\n",
-    "grid.d[14, 1:3, 0] = 0\n"
+    "grid.d[14, 1:3, 0] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid.scale_factor=3\n",
-    "grid.size_marker=2"
+    "grid.scale_factor=2\n",
+    "grid.size_marker=0.7"
    ]
   },
   {
@@ -193,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cb9f13e823c4cdfbf714d8b6aab42a0",
+       "model_id": "35e60b294faf4dc6aeaaa0db0c88524a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,12 +214,12 @@
    "source": [
     "grid = plot_voxel_size(16,16,16,\"blue\")\n",
     "grid.scale_factor=2\n",
-    "grid.size_marker=[0.5, 1, 2]"
+    "grid.size_marker=[0.7, 0.5, 1.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85c029dcf0d24eafb8943d085e3d264e",
+       "model_id": "92ecbc7f7d8e49389db20e67a6ca8e69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,12 +258,12 @@
    "source": [
     "grid = plot_voxel_size(16,20,10,\"green\")\n",
     "grid.scale_factor=3\n",
-    "grid.size_marker=[2, 0.5, 0.7]"
+    "grid.size_marker=[0.7, 0.2, 0.4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,13 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d9a9fbb1b8f4990b17d4b0a083e397f",
+       "model_id": "4a655804a54d4d02bac5ea5206099cd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab0bc2837780411ea95b0f7fa366b59f",
+       "model_id": "55e548e322c947e1940a606c11a4318d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
     "\n",
     "box = plot_voxel_simple(16,16,16, \"yellow\", size=1)\n",
     "box.scale_factor=3\n",
-    "box.size_marker=1\n",
+    "box.size_marker=1# 0.3\n",
     "plane = plot_voxel_simple(160,1,160, \"red\", size=1)\n",
     "plane.pos_offset_x = -30\n",
     "plane.pos_offset_y = -20\n",
@@ -355,13 +355,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
