--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7bda56d833454fa4ff956ec79454f3",
+       "model_id": "4e89da57d1a24fc9b52dc33f45069ab0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24aac214daa649f8ba2beabe581d552b",
+       "model_id": "a30c6d8898eb414e93b3e050a33a081b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35e60b294faf4dc6aeaaa0db0c88524a",
+       "model_id": "1b5940dffba64cddab6cb7c0d0d64528",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,20 +212,28 @@
     }
    ],
    "source": [
-    "grid = plot_voxel_size(16,16,16,\"blue\")\n",
-    "grid.scale_factor=2\n",
+    "grid = plot_voxel_size(10,10,10,\"blue\")\n",
+    "grid.scale_factor=1.5\n",
     "grid.size_marker=[0.7, 0.5, 1.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid.pos_offset_x += 15\n",
-    "grid.pos_offset_y += 15\n",
-    "grid.pos_offset_z -= 30"
+    "grid.offset=[10,10,-100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.offset[2] += 50\n",
+    "grid.send_state('offset') #should call send_state whenever changing offset"
    ]
   },
   {
@@ -237,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92ecbc7f7d8e49389db20e67a6ca8e69",
+       "model_id": "34d5805bed234aad82d1f2f8e743660b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a655804a54d4d02bac5ea5206099cd2",
+       "model_id": "ef76f5d2709743b2b8b9404d95360819",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55e548e322c947e1940a606c11a4318d",
+       "model_id": "901610bd01354f74b1e2c38fcbdbaccf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,20 +335,18 @@
     "\n",
     "box = plot_voxel_simple(16,16,16, \"yellow\", size=1)\n",
     "box.scale_factor=3\n",
-    "box.size_marker=1# 0.3\n",
+    "box.size_marker= 0.3\n",
     "plane = plot_voxel_simple(160,1,160, \"red\", size=1)\n",
-    "plane.pos_offset_x = -30\n",
-    "plane.pos_offset_y = -20\n",
-    "plane.pos_offset_z = -30\n",
+    "plane.offset = [-30, -20, -30]\n",
     "\n",
     "# light_d = p3.directional_light(light_color=\"blue\", \n",
     "#                                position=[-100,100,100],\n",
-    "#                                target=[plane.pos_offset_x, plane.pos_offset_y, plane.pos_offset_z])\n",
+    "#                                target=[plane.offset[0], plane.offset[1], plane.offset[2]])\n",
     "light_s = p3.spot_light(light_color=\"orange\", \n",
     "                        position=[-100,200,-100], \n",
-    "                        target=[plane.pos_offset_x+55, \n",
-    "                                plane.pos_offset_y, \n",
-    "                                plane.pos_offset_z+55])\n",
+    "                        target=[plane.offset[0]+55, \n",
+    "                                plane.offset[1], \n",
+    "                                plane.offset[2]+55])\n",
     "light_s.angle = 0.2\n",
     "light_s.penumbra = 0.1\n",
     "light_s.shadow.bias = -0.00007\n",
