--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,7 @@
     "                    marker='box', \n",
     "                    color=color,\n",
     "                    opacity=1.0,\n",
-    "                    grow_limits=True,\n",
-    "                    center=True)\n",
+    "                    grow_limits=True,)\n",
     "    return grid\n",
     "def plot_voxel_size(n=1, m=1, p=1, color='red', size=None, minimal=False):\n",
     "\n",
@@ -58,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e89da57d1a24fc9b52dc33f45069ab0",
+       "model_id": "5f89e08bfdbd4092b4582474744e58c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +116,94 @@
    "outputs": [],
    "source": [
     "grid.d_opacity=True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scaling Bug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70d43bd8a7db4d65b752f7f53ac702e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Wrong\n",
+    "# for reason unknown the cube is not at the correct grid position\n",
+    "ipv.clear()\n",
+    "ipv.figure(height=600, width=800)\n",
+    "v = np.zeros([100,100,100])\n",
+    "v[10:50,10:50,10:50] = 1\n",
+    "# v[0,0,0] = 1\n",
+    "# v[99,99,99] = 1\n",
+    "\n",
+    "grid = ipv.plot_voxel(d=v,\n",
+    "                    size_marker=0.9,\n",
+    "                    scale_factor=1,\n",
+    "                    offset=[0,0,0],\n",
+    "                    marker='box', \n",
+    "                    color='red',\n",
+    "                    opacity=1.0,\n",
+    "                    grow_limits=True)\n",
+    "ipv.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a6f94b14cf74d16a1de1916a9b1a011",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Correct\n",
+    "ipv.clear()\n",
+    "ipv.figure(height=600, width=800)\n",
+    "v = np.zeros([100,100,100])\n",
+    "v[10:50,10:50,10:50] = 1\n",
+    "v[0,0,0] = 1\n",
+    "v[99,99,99] = 1\n",
+    "\n",
+    "grid = ipv.plot_voxel(d=v,\n",
+    "                    size_marker=0.9,\n",
+    "                    scale_factor=1,\n",
+    "                    offset=[0,0,0],\n",
+    "                    marker='box', \n",
+    "                    color='red',\n",
+    "                    opacity=1.0,\n",
+    "                    grow_limits=True)\n",
+    "ipv.show()"
    ]
   },
   {
@@ -368,9 +455,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.10 64-bit ('rinf-ipyvolume': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python361064bitrinfipyvolumecondab83d407bdb5649308cd8f1316c1669ca"
   },
   "language_info": {
    "codemirror_mode": {
@@ -382,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
