--- a/notebooks/plot_voxel.ipynb
+++ b/notebooks/plot_voxel.ipynb
@@ -25,10 +25,7 @@
     "    pass\n",
     "def plot_voxel_simple(n=1, m=1, p=1, color='red', size=None):\n",
     "    v = np.ones([n,m,p])\n",
-    "    if size==None:\n",
-    "        size=100/np.max(np.shape(v))\n",
     "    grid = ipv.plot_voxel(d=v,\n",
-    "                    size=size,\n",
     "                    size_marker=1,\n",
     "                    scale_factor=1,\n",
     "                    offset=[0,0,0],\n",
@@ -63,7 +60,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f89e08bfdbd4092b4582474744e58c6",
+       "model_id": "9cf2f9560bee4263ae5728dacfde913b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70d43bd8a7db4d65b752f7f53ac702e6",
+       "model_id": "4385e84fdcf04326af388d2477cd85d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a6f94b14cf74d16a1de1916a9b1a011",
+       "model_id": "1e48a45d1fc441c8ad7048d399300713",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,13 +212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a30c6d8898eb414e93b3e050a33a081b",
+       "model_id": "001a745ac2464935b8fc30f2557b9ec5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,13 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b5940dffba64cddab6cb7c0d0d64528",
+       "model_id": "31fbd7c2495349cf84b4b8bac8907ebb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,13 +329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34d5805bed234aad82d1f2f8e743660b",
+       "model_id": "483c11a28e984f3eb85f94f59e9297af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef76f5d2709743b2b8b9404d95360819",
+       "model_id": "d5ef4f0aaf684875b177c34d9488e1bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "901610bd01354f74b1e2c38fcbdbaccf",
+       "model_id": "3d6ca210b1a54f1e98cac3c92f000b4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('rinf-ipyvolume': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python361064bitrinfipyvolumecondab83d407bdb5649308cd8f1316c1669ca"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -469,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
